--- a/nitter.example.conf
+++ b/nitter.example.conf
@@ -33,7 +33,7 @@ tokenCount = 10
 # always at least $tokenCount usable tokens. again, only increase this if
 # you receive major bursts all the time
 
-#cookieHeader = "ct0=XXXXXXXXXXXXXXXXX; auth_token=XXXXXXXXXXXXXX" # authentication cookie of a logged in account, required for the likes tab and NSFW content
+#cookieHeader = "ct0=XXXXXXXXXXXXXXXXX;auth_token=XXXXXXXXXXXXXX" # authentication cookie of a logged in account, required for the likes tab and NSFW content, no white spaces allowed
 #xCsrfToken = "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX" # required for the likes tab and NSFW content
 
 # Change default preferences here, see src/prefs_impl.nim for a complete list
