--- a/.github/workflows/build-publish-docker.yml
+++ b/.github/workflows/build-publish-docker.yml
@@ -48,7 +48,7 @@ jobs:
           
 
       - name: Build and push amd64 Docker image
-        id: build-and-push
+        id: build-and-push-amd64
         uses: docker/build-push-action@v4
         with:
           context: .
@@ -61,7 +61,7 @@ jobs:
           cache-to: type=gha,mode=max
 
       - name: Build and push arm64 Docker image
-        id: build-and-push
+        id: build-and-push-arm64
         uses: docker/build-push-action@v4
         with:
           context: .
