--- a/.github/workflows/build-publish-docker.yml
+++ b/.github/workflows/build-publish-docker.yml
@@ -46,6 +46,11 @@ jobs:
           images: |
             ghcr.io/${{ env.IMAGE_NAME }}
           
+      - name: set lower case repo name
+        run: |
+          echo "REPO_LC=${REPO,,}" >>${GITHUB_ENV}
+        env:
+          REPO: '${{ github.repository }}'
 
       - name: Build and push amd64 Docker image
         id: build-and-push-amd64
@@ -54,7 +59,7 @@ jobs:
           context: .
           file: ./Dockerfile
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ env.IMAGE_NAME }}:master,${{ env.IMAGE_NAME }}:${{ github.sha }}
+          tags: ${{ env.REPO_LC }}:master,${{ env.REPO_LC }}:${{ github.sha }}
           labels: ${{ steps.meta.outputs.labels }}
           platforms: linux/amd64
           cache-from: type=gha
@@ -67,7 +72,7 @@ jobs:
           context: .
           file: ./Dockerfile.arm64
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ env.IMAGE_NAME }}:master-arm64,${{ env.IMAGE_NAME }}:${{ github.sha }}-arm64
+          tags: ${{ env.REPO_LC }}:master-arm64,${{ env.REPO_LC }}:${{ github.sha }}-arm64
           labels: ${{ steps.meta.outputs.labels }}
           platforms: linux/arm64
           cache-from: type=gha
