Changes to be committed: x	modified:   nitter.example.conf 	modified:   src/apiutils.nim 	modified:   src/config.nim 	modified:   src/types.nim 	modified:   src/views/search.nim

--- a/nitter.example.conf
+++ b/nitter.example.conf
@@ -35,6 +35,7 @@ tokenCount = 10
 
 #cookieHeader = "ct0=XXXXXXXXXXXXXXXXX; auth_token=XXXXXXXXXXXXXX" # authentication cookie of a logged in account, required for the likes tab and NSFW content
 #xCsrfToken = "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX" # required for the likes tab and NSFW content
+#bearerToken = "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX" # required for likes
 
 # Change default preferences here, see src/prefs_impl.nim for a complete list
 [Preferences]
